[package]
name = "beelay-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
argh = "0.1.12"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking"] }
serde = "1.0.213"
serde_json = "1.0.132"
